<resources>
    <string name="app_name">MyBikeService</string>
    <string name="new_maintenance">Nova Manutenção</string>
    <string name="concluded">Concluído</string>
    <string name="save">Salvar</string>
    <string name="edit">Editar</string>
    <string name="remove">Deletar</string>
    <string name="maintenance_list">Lista de Manutenções</string>
    <string name="details">Detalhes da Manutenção</string>
    <string name="part_list">Ir para a tela de peças"</string>
    <string name="initialDate">Data Inicial</string>
    <string name="partList">Peças</string>
    <string name="desc">Descrição</string>
    <string name="status">Status</string>
    <string name="new_part">Nova Peça</string>
    <string name="numer_serie">Número de Série</string>
    <string name="desc_part">Descrição</string>
    <string name="model_part">Modelo</string>
    <string name="manufacturer_part">Fabricante</string>
    <string name="register_part">Data de Registro</string>
    <string name="retire">Aposentar</string>
</resources>