<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.PartFragment">
    <EditText
        android:id="@+id/numberSerieEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numer_serie"
        tools:ignore="LabelFor,MissingConstraints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/descPartEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc_part"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberSerieEt"
        />
    <EditText
        android:id="@+id/modelPartsEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/model_part"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descPartEt"
        />
    <EditText
        android:id="@+id/manufacturerPartEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/manufacturer_part"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modelPartsEt"
        />

    <EditText
        android:id="@+id/dataRegisterPartEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_part"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/manufacturerPartEt"
        />

    <Button
        android:id="@+id/savePartBt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dataRegisterPartEt" />

</androidx.constraintlayout.widget.ConstraintLayout>