<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.MaintenanceFragment">

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/initialDate"
        android:inputType="date"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/descEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEt"
        android:hint="@string/desc"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/partEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descEt"
        android:hint="@string/partList"
        android:inputType="text"
        tools:ignore="LabelFor" />


    <CheckBox
        android:id="@+id/stausCb"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/concluded"
        android:textColorHighlight="@color/ultra_violet"
        android:textColorLink="@color/ultra_violet"
        android:textCursorDrawable="@color/ultra_violet"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/partEt" />

    <TextView
        android:id="@+id/statusTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/partEt"
        />

    <Button
        android:id="@+id/saveBt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stausCb" />


</androidx.constraintlayout.widget.ConstraintLayout>

